job-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "kubernetes-demo-app-ingress-service"
spec:
  tls:
  - hosts:
    - kube.yoursubhransudas.online # Your host. CHANGE ME
    secretName: letsencrypt-certs # Name of the secret
  rules:
  - host: kube.yoursubhransudas.online # CHANGE ME!
    http:
      paths:
      # The * is needed so that all traffic gets redirected to nginx
      - path: /*
        backend:
          serviceName: nginx
          servicePort: 80
